Propagate app-initiated state to new ResourceRequests https://bugs.webkit.org/show_bug.cgi?id=234015 <rdar://problem/86128638>

Reviewed by Kate Cheney.

Source/WebCore:

While reviewing logging we have found that some ResourceRequest objects
are missing the correct state for app-initiated loads. Typically, these
are cases where a new ResourceRequest is created from a URL string, losing
the context that came with the original load (or the context of the page
triggering the load).

This patch corrects a number of such cases.

Tests: http/tests/app-privacy-report/app-attribution-beacon-isappinitiated.html
       http/tests/app-privacy-report/app-attribution-beacon-isnotappinitiated.html
       http/tests/app-privacy-report/new-window-isappinitiated.html
       http/tests/app-privacy-report/new-window-isnotappinitiated.html

* Modules/beacon/NavigatorBeacon.cpp:
(WebCore::NavigatorBeacon::sendBeacon):
* Modules/websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::connect):
* Modules/websockets/WebSocketHandshake.cpp:
(WebCore::WebSocketHandshake::WebSocketHandshake):
(WebCore::WebSocketHandshake::clientHandshakeRequest const):
* Modules/websockets/WebSocketHandshake.h:
* loader/CrossOriginAccessControl.cpp:
(WebCore::createPotentialAccessControlRequest):
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::willLoadMediaElementURL):
(WebCore::FrameLoader::commitProvisionalLoad):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::createWindow):

Source/WebKit:

While reviewing logging we have found that some ResourceRequest objects
are missing the correct state for app-initiated loads. Typically, these
are cases where a new ResourceRequest is created from a URL string, losing
the context that came with the original load (or the context of the page
triggering the load).

This patch corrects a number of such cases.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::createNewPage): Propagate app-initiated state to newly created page.
* NetworkProcess/cache/NetworkCacheSubresourcesEntry.cpp:
(WebKit::NetworkCache::SubresourceInfo::encode const): Correct missing serialization for
app-initiated state.
(WebKit::NetworkCache::SubresourceInfo::decode):
(WebKit::NetworkCache::SubresourceInfo::SubresourceInfo):

LayoutTests:

* http/tests/app-privacy-report/app-attribution-beacon-isappinitiated-expected.txt: Added.
* http/tests/app-privacy-report/app-attribution-beacon-isappinitiated.html: Added.
* http/tests/app-privacy-report/app-attribution-beacon-isnotappinitiated-expected.txt: Added.
* http/tests/app-privacy-report/app-attribution-beacon-isnotappinitiated.html: Added.
* http/tests/app-privacy-report/new-window-isappinitiated.html: Added.
* http/tests/app-privacy-report/new-window-isappinitiated-expected.txt: Added.
* http/tests/app-privacy-report/new-window-isnotappinitiated.html: Added.
* http/tests/app-privacy-report/new-window-isnotappinitiated-expected.txt: Added.
* http/tests/app-privacy-report/resources/new-window-isappinitiated-win.html: Added.
* http/tests/app-privacy-report/resources/new-window-isnotappinitiated-win.html: Added.



Canonical link: https://commits.webkit.org/245490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287348 268f45cc-cd09-0410-ab3c-d52691b4dbfc