Source/WebKit/NetworkProcess/cache/NetworkCacheSubresourcesEntry.cpp
@@ -47,6 +47,7 @@ void SubresourceInfo::encode(WTF::Persistence::Encoder& encoder) const
         return;
 
     encoder << m_isSameSite;
+    encoder << m_isAppInitiated;
     encoder << m_firstPartyForCookies;
     encoder << m_requestHeaders;
     encoder << m_priority;
@@ -88,6 +89,12 @@ std::optional<SubresourceInfo> SubresourceInfo::decode(WTF::Persistence::Decoder
     if (!isSameSite)
         return std::nullopt;
     info.m_isSameSite = WTFMove(*isSameSite);
+
+    std::optional<bool> isAppInitiated;
+    decoder >> isAppInitiated;
+    if (!isAppInitiated)
+        return std::nullopt;
+    info.m_isAppInitiated = WTFMove(*isAppInitiated);
 
     std::optional<URL> firstPartyForCookies;
     decoder >> firstPartyForCookies;
@@ -158,6 +165,7 @@ SubresourceInfo::SubresourceInfo(const Key& key, const WebCore::ResourceRequest&
     , m_firstSeen(previousInfo ? previousInfo->firstSeen() : m_lastSeen)
     , m_isTransient(!previousInfo)
     , m_isSameSite(request.isSameSite())
+    , m_isAppInitiated(request.isAppInitiated())
     , m_firstPartyForCookies(request.firstPartyForCookies())
     , m_requestHeaders(request.httpHeaderFields())
     , m_priority(request.priority())
